vendor/proc-macro-error-1.0.4/tests/ui/not_proc_macro.rs
use proc_macro_error::proc_macro_error;

#[proc_macro_error]
fn main() {}
